Fixed build by gcc 14

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ conan_basic_setup()
 
 find_package(OpenSSL REQUIRED)
 
+if (UNIX AND CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-error=implicit-function-declaration -Wno-error=incompatible-pointer-types")
+endif()
+
 add_subdirectory(src)
